feat: major refactoring for further development, replace deprecation methods (but performance is slow)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "files": [],
+  // "compilerOptions": {
+  //   "types": ["vite-plugin-glsl/ext"]
+  // },
   "references": [
     {
       "path": "./tsconfig.app.json"
