--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsfft": "^0.0.4",
     "lodash.debounce": "^4.0.8",
     "prettier": "^3.3.3",
+    "queue-typescript": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-toastify": "^10.0.5"
